--- a/css/device-carousel.css
+++ b/css/device-carousel.css
@@ -1,107 +1,19 @@
 
-#device-carousel {
-    
+.device-carousel {
+
 }
 
-
-/* CAROUSEL */
-#device-carousel .device-carousel {
-    display:grid;
-    grid-template-columns: auto 1fr auto;
+.device-carousel .overflow-container {
+    height:500px;
 }
 
-#device-carousel .device-carousel #device-images {
-    position: relative;
-    height:35vh;
-    overflow-x:scroll;
-    scroll-behavior: smooth;
-    display:flex;
-    transition: 1000ms;
-    pointer-events: none;
-}
-
-#device-carousel .device-carousel #device-images::-webkit-scrollbar {
-    display: none;
-}
-
-#device-carousel.full .device-carousel #device-images {
-    height:65vh;
-}
-
-#device-carousel .device-carousel #device-images > div {
+.device-carousel .overflow-container > div {
     height:100%;
-    min-width:100%;
-    display:flex;
-    justify-content: center;
+    width:100%;
 }
 
-#device-carousel .device-carousel #device-images > div img {
+.device-carousel .overflow-container > div img {
     height:100%;
-    user-select: none;
-}
-
-/* CONTROLS */
-#device-carousel .device-carousel .page-control {
-    width:32px;
-    display:flex;
-    align-items: center;
-}
-
-#device-carousel .device-carousel .page-control svg {
-    fill:var(--gray-800);
-    cursor: pointer;
-}
-
-#device-carousel .device-carousel .page-control.inactive svg {
-    fill:var(--gray-300);
-    pointer-events: none;
-}
-
-
-/* PAGINATION */
-#device-carousel .pagination {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap:16px;
-    margin-top:32px;
-}
-
-#device-carousel .pagination > div {
-    width:32px;
-    height:6px;
-    border-radius: 60px;
-    transition: all 300ms;
-    background-color:var(--gray-300);
-    border: 1px solid transparent;
-    cursor:pointer
-}
-
-#device-carousel .pagination > div:hover {
-    background-color:#fff;
-    border: 1px solid var(--gray-300);
-}
-
-#device-carousel .pagination > div.active {
-    width:64px;
-    background-color:var(--gray-500);
-    pointer-events: none;
-}
-
-
-
-/* SHARE ICONS */
-#share-icons {
-    display:flex;
-    justify-content: space-between;
-}
-
-
-/* MENU ICONS */
-#device-carousel .device-views {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:16px;
-    margin-top:32px;
+    width:100%;
+    object-fit: contain;
 }
