--- a/css/nutrition-label.css
+++ b/css/nutrition-label.css
@@ -128,6 +128,10 @@
     font-size: 1.2rem;
 }
 
+.nutrition-label h4 {
+    font-size: 1.6rem;
+}
+
 .nutrition-label p {
     font-size: var(--type-xs);
     margin:0;
